# stopclock

./: AUTHORS  CMakeLists.txt  README.md  TODO.md
data/: com.github.nine-h.stopclock.gschema.xml  stopclock.app.desktop  stopclock.css  stopclock.desktop
src/: alarm.vala  countdown.vala  eggtimer.vala  manager_view.vala  reminder.vala  stopclock.vala  stopwatch.vala  utils.vala  window.vala  worldclock.vala
src/widgets/: alarm_popover.vala  alarm_timer.vala  counter.vala  eggtimer_timeout.vala  eggtimer_timer.vala  hms_popover.vala  reminder_popover.vala  reminder_timer.vala
